<resources>
    <string name="app_store_name">QuickSale</string>
    <string name="app_name">QS-User</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="order">Order</string>
    <string name="taken">Taken</string>
    <string name="returns">Return</string>
    <string name="sales">Sales</string>
    <string name="resources">Resources</string>
    <string name="sales_man">Sales Man</string>
    <string name="view_items">View Items</string>
    <string name="date">Date</string>
    <string name="submit">SUBMIT</string>
    <string name="party_name">Party Name</string>
    <string name="gst_in">Gst-In</string>
    <string name="address">Address</string>
    <string name="route">Route</string>
    <string name="customer">Customer</string>
    <string name="create">Create</string>
    <string name="billing">Billing</string>
    <string name="sign_out">Sign out</string>
    <string name="sell">Sell</string>
    <string name="customer_name">Customer Name</string>
    <string name="scanning">Searching…</string>
    <string name="none_found">No devices found</string>
    <string name="alert_title">Re-connect</string>
    <string name="alert_message">Would you like to re-connect with a bluetooth printer?</string>
    <string name="alert_btn_positive">Yes</string>
    <string name="alert_btn_negative">No</string>
    <string name="no_printer_connected">No printer is connected</string>
    <string name="select_device">Select a device to connect</string>
    <string name="print_line">"--------------------------------"  </string>
    <string name="print_cust">"------- Customer Details -------"  </string>
    <string name="none_paired">No devices have been paired</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Search for devices</string>
    <string name="no_printer_is_connected">No printer is connected</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected_to">connected: </string>
    <string name="connect_a_bluetooth_printer">Connect a bluetooth printer</string>
    <string name="product">Product</string>
    <string name="qty">QTY</string>
    <string name="rate">Rate</string>
    <string name="total">Total</string>
    <string name="no_bill">No Bill</string>
    <string name="view_bills">View Bills</string>
    <string name="_start">Start</string>
    <string name="_continue">Continue</string>
    <string name="error">Error</string>
    <string name="not_valid">Not valid</string>
    <string name="no_stock">No stock</string>
    <string name="bill_prefix">RS-</string>
    <string name="loading">Loading…</string>
    <string name="nil">NIL</string>
    <string name="connect_printer">Connect Printer</string>
    <string name="_dir">QS_POS</string>
    <string name="result">result</string>
    <string name="print">Print</string>
    <string name="delete">Delete</string>
    <string name="dateformat">dd-MM-yyyy</string>
</resources>