<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_taken"
            android:icon="@drawable/ic_taken"
            android:title="@string/taken" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_create"
            android:title="@string/order"
            android:visible="false" />

    </group>

    <item android:title="@string/resources">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setup"
                    android:icon="@drawable/ic_setup"
                    android:title="@string/view_items" />
            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
