<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="azhar.com.quicksaleclient.activity.TakenSellActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_create_order">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sales_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="16dp"
                android:text="@string/sales_man"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sales_man_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sales_man"
                android:layout_margin="8dp"
                android:background="@drawable/box_white"
                android:orientation="horizontal"
                android:padding="16dp"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_party_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sales_man_list"
                android:padding="16dp">

                <AutoCompleteTextView
                    android:id="@+id/et_customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:hint="@string/customer_name"
                    android:imeOptions="actionSearch"
                    android:inputType="textAutoComplete|textCapCharacters"
                    android:padding="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_gst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_party_name"
                android:padding="16dp">

                <EditText
                    android:id="@+id/et_customer_gst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:hint="@string/gst_in"
                    android:inputType="textAutoComplete|textCapCharacters"
                    android:padding="8dp"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/et_customer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_gst"
                android:layout_margin="8dp"
                android:background="@drawable/box_white"
                android:gravity="top"
                android:hint="@string/address"
                android:inputType="textMultiLine|textCapCharacters"
                android:lines="5"
                android:padding="8dp" />

            <TableRow
                android:id="@+id/tr_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/et_customer_address"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/product"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/qty"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/rate"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/total"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorWhite" />

            </TableRow>

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tr_header" />

            <TextView
                android:id="@+id/tv_sell_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/table_layout"
                android:background="@drawable/box_white"
                android:gravity="center"
                android:padding="16dp"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_primary"
        android:onClick="sellItems"
        android:text="@string/print"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorLightWhite" />


</RelativeLayout>
